fixtures/frontend/milestone-2/invalid/single-char-domain-literal-suffix/main.aivi
domain Distance over Int
    suffix m : Int = value => Distance value

value walk = 3m
